# hymnos

./: Hymnos.excalidraw  README.md
backend/: .gitignore  old-reqs.txt  pyproject.toml  requirements.txt
backend/src/: _generate_arabic_hymns.py  main.py
backend/src/jobs/: convert_tasbehna_job.py
backend/src/models/: api.py  hymnos.py  tasbe7na.py
backend/src/routers/: auth.py  data.py
backend/src/utils/: io.py  openapi.py  tasbehna.py
frontend/: .gitignore  App.tsx  app.json  babel.config.js  db.ts  global.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  useColorStore.js  workbox-config.js
frontend/app/: +not-found.tsx  index.tsx
frontend/app/create/: hymn.tsx  pack.tsx
frontend/assets/: global.css
frontend/components/: ColorPickerMenu.tsx  ConfirmModal.tsx  EditToolBox.tsx  EditableTextInput.tsx  FontMenu.tsx  FontSizeAdjuster.tsx  HymnosPageWrapper.tsx  HymnosText.tsx  PlusButton.tsx  PresentationSettingsMenu.tsx  ProgressBar.tsx  SearchBar.tsx  SearchResultsList.tsx  SlideEditIcon.tsx  SlideSettingsIcon.tsx  SlideSettingsMenu.tsx  Toolbox.tsx
frontend/db/: dexie.ts  localstorage.ts  models.ts  utils.ts
frontend/hooks/: useAutoSizeTextArea.ts  useConfirmModal.ts  useGlobalLocalStorage.ts  usePresentationFonts.ts  useRubikFonts.ts  useSwipe.tsx
frontend/icons/: PresentationSettingsIcon.tsx
frontend/pages/: Home.tsx  HymnPack.tsx  HymnPresentation.tsx
frontend/public/: index.html  manifest.json
frontend/scripts/: 11_download_tasbe7na_db.sh
frontend/utils/: exporter.ts  notification.ts  sharing.ts  ui.ts
(+28 files in other folders)
